# LibSandbox

./: .gitignore  .gitmodules
benchmarks/: Makefile  README.md  loader_test.c  privilage_test  privilage_test.c  run.sh  shm_test  shm_test.c
benchmarks/apps/: CMakeLists.wasm.txt  zlib_build_wasm.sh
intra_proc_sbox/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build_api.sh  cmake_install.cmake  kernel_api.c  loader.c  loader.h  main.c  mdom.c  mdom.h  nlink.h  test_send_recv.c  tpt.c  tpt.h  tpt_loader.c  uexec.c
intra_proc_sbox/minlibc/: file_size.c  linux_close.c  linux_exit.c  linux_mprotect.c  linux_munmap.c  linux_open.c  linux_read.c  linux_sbrk.c  linux_stat.c  linux_write.c  makefile  memcpy.c  print.c  string.c  strtoul.c
